Fix form scrolling on mobile

--- a/src/pages/VolunteerPage/VolunteerPage.css
+++ b/src/pages/VolunteerPage/VolunteerPage.css
@@ -11,3 +11,9 @@
     width: 60%;
   }
 }
+
+@media screen and (max-width: 920px) {
+  #volunteer-form {
+    height: 3000px;
+  }
+}
